--- a/app/views/galleries/index.html.erb
+++ b/app/views/galleries/index.html.erb
@@ -1,29 +1,22 @@
-<p id="notice"><%= notice %></p>
+<div class="container">
 
-<h1>Galleries</h1>
+<div class="row">
 
-<table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Description</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+    <div class="col-lg-12">
+        <h1 class="page-header">Gallery</h1>
+    </div>
+    <%@galleries.each do |gallery|%>
+      <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+        <%= link_to gallery_path(gallery) do %>
+          <%= image_tag gallery.photo.url, class: 'img-responsive' %>
+          <!-- <a class="thumbnail" href="#">
+              <img class="img-responsive" src="http://placehold.it/400x300" alt="">
+          </a> -->
+        <%end%>
+      </div>
+    <%end%>
+</div>
 
-  <tbody>
-    <% @galleries.each do |gallery| %>
-      <tr>
-        <td><%= gallery.title %></td>
-        <td><%= gallery.description %></td>
-        <td><%= link_to 'Show', gallery %></td>
-        <td><%= link_to 'Edit', edit_gallery_path(gallery) %></td>
-        <td><%= link_to 'Destroy', gallery, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+<hr>
 
-<br>
-
-<%= link_to 'New Gallery', new_gallery_path %>
+</div>
