--- a/app/assets/stylesheets/galleries.scss
+++ b/app/assets/stylesheets/galleries.scss
@@ -1,3 +1,23 @@
 // Place all the styles related to the galleries controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+@import url(https://fonts.googleapis.com/css?family=Bree+Serif);
+  body {
+    background:#ebebeb;
+  }
+  ul {
+      padding:0 0 0 0;
+      margin:0 0 40px 0;
+  }
+  ul li {
+      list-style:none;
+      margin-bottom:10px;
+  }
+.text {
+  /*font-family: 'Bree Serif';*/
+  color:#666;
+  font-size:11px;
+  margin-bottom:10px;
+  padding:12px;
+  background:#fff;
+}
