--- a/app/views/galleries/_form.html.erb
+++ b/app/views/galleries/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(gallery) do |f| %>
+<%= form_for @gallery, :html => {:class => "form-horizontal"} do |f| %>
   <% if gallery.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(gallery.errors.count, "error") %> prohibited this gallery from being saved:</h2>
@@ -10,23 +10,28 @@
       </ul>
     </div>
   <% end %>
-
-  <div class="field">
-    <%= f.label :title %>
-    <%= f.text_field :title %>
+  <div class="form-group">
+      <%= f.label :title , class: 'col-sm-2 control-label'%>
+      <div class="col-sm-6">
+          <%= f.text_field :title, autofocus: true, class: 'form-control' %>
+      </div>
   </div>
-
-  <div class="field">
-    <%= f.label :description %>
-    <%= f.text_area :description %>
+  <div class="form-group">
+      <%= f.label :description , class: 'col-sm-2 control-label'%>
+      <div class="col-sm-6">
+          <%= f.text_area :description, autofocus: true, class: 'form-control' %>
+      </div>
   </div>
+  <div class="form-group">
+      <%= f.label :photo , class: 'col-sm-2 control-label'%>
+      <div class="col-sm-6">
+          <%= f.file_field :photo %>
+      </div>
+  </div>  
   
-  <div class="field">
-    <%= f.label :photo %>
-    <%= f.file_field :photo %>
-  </div>
-  
-  <div class="actions">
-    <%= f.submit %>
-  </div>
+    <div class="form-group">
+        <div class="col-sm-offset-2 col-sm-6">
+            <%= f.submit "Submit", class: "btn btn-primary" %>
+        </div>
+    </div>
 <% end %>
