--- a/app/views/galleries/show.html.erb
+++ b/app/views/galleries/show.html.erb
@@ -10,5 +10,5 @@
   <%= @gallery.description %>
 </p>
 
-<%= link_to 'Edit', edit_gallery_path(@gallery) %> |
-<%= link_to 'Back', galleries_path %>
+<%= link_to 'Edit', edit_gallery_path(@gallery),class: "btn btn-primary" %> |
+<%= link_to 'Back', galleries_path,class: "btn btn-success" %>
