--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -11,7 +11,7 @@
         </div>
         <div class="collapse navbar-collapse" id="navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
-                <li><%= link_to 'Gallery', galleries_url %></li>
+                <li><%= link_to 'Gallery', galleries_url, data: { turbolinks: false } %></li>
                 <% if current_user %>
                 <li><%= link_to 'Edit Profile',edit_user_registration_path %></li>
                 <li><%= link_to 'Logout', destroy_user_session_path, method: :delete %></li>
