--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,1 +1,5 @@
-Hello
+<div class="jumbotron">
+  <h1>You Can Upload Your Photos Here!</h1>
+ 
+  <p><%= link_to "Upload Image",new_gallery_path,class: "btn btn-primary btn-lg"%></p>
+</div>
