--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -4,10 +4,14 @@
     <%= devise_error_messages! %>
 
     <div class="form-group">
+        <div id="target" class="uploadimg">
+            <%= image_tag current_user.avatar.url(:medium),class: "round-image-51" %>
+        </div>
         <%= f.label :avatar, class: 'col-sm-2 control-label'  %>
         <div class="col-sm-6">
-            <%= f.file_field :avatar %>
+            <%= f.file_field :avatar, id: 'picture' %>
         </div>
+
     </div>
 
 
@@ -61,15 +65,5 @@
         </div>
     </div>
 
-    <!--<div class="form-group">-->
-    <!--    <div class="col-sm-offset-2 col-sm-6">-->
-    <!--        <%#= render "shared/links" %>-->
-    <!--    </div>-->
-    <!--</div>-->
     <% end %>
-
-    <h5>Cancel my account</h5>
-
-    <p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class: 'btn btn-default btn-xs' %></p>
-
-    <%= link_to "Back", :back %>
+    
