--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -3,12 +3,13 @@
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: {class: 'form-horizontal' }) do |f| %>
   <%= devise_error_messages! %>
     <div class="form-group">
+        <div id="target" class="uploadimg"></div>
         <%= f.label :avatar, class: 'col-sm-2 control-label'  %>
         <div class="col-sm-6">
-            <%= f.file_field :avatar %>
+            <%= f.file_field :avatar, id: 'picture' %>
         </div>
     </div>
-
+    
 
     <div class="form-group">
         <%= f.label :name, class: 'col-sm-2 control-label'  %>
