--- a/app/views/galleries/_form.html.erb
+++ b/app/views/galleries/_form.html.erb
@@ -23,9 +23,10 @@
       </div>
   </div>
   <div class="form-group">
+      <div id="target" class="uploadimg"></div>
       <%= f.label :photo , class: 'col-sm-2 control-label'%>
       <div class="col-sm-6">
-          <%= f.file_field :photo %>
+          <%= f.file_field :photo,id: 'picture' %>
       </div>
   </div>  
   
