--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -3,6 +3,7 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 @import "bootstrap-sprockets";
 @import "bootstrap";
+@import 'bootstrap-datetimepicker';
 
 .round-image-50 {
     background-color: white;
@@ -26,9 +27,16 @@
     width: 50px;
     overflow: hidden;
     text-align: center;
-    img { width: 100% }
+    img {    border: 0;
+    height: 100px;
+    width: 100px;
+    padding-bottom: 10px; }
 }
 .uploadimg {
     position: relative;
     left: 212px;
+    img {    border: 0;
+    height: 100px;
+    width: 100px;
+    padding-bottom: 10px; }
 }
